--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 <body>
     <div class="video-container">
         <video autoplay loop muted>
-            <source src="https://raw.githubusercontent.com/deadforlov/Katiex.xs/refs/heads/main/xxs.mp4" type="video/mp4">
+            <source src="https://raw.githubusercontent.com/deadforlov/velax/refs/heads/main/1005.mp4" type="video/mp4">
             Ваш браузер не поддерживает тег video.
         </video>
     </div>
